[package]
name = "tempulse-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
tempulse-core = { path = "../core" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
